src/objects/externalObject__x.object
<CustomObject>
    <description>externalObject</description>
    <externalDataSource>sapData</externalDataSource>
    <externalName>externalObject</externalName>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Summary</description>
        <externalDeveloperName>Summary</externalDeveloperName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title</description>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrueOrFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TrueOrFalse</description>
        <externalDeveloperName>TrueOrFalse</externalDeveloperName>
        <label>TrueOrFalse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Val__c</fullName>
        <description>Val</description>
        <externalDeveloperName>Val</externalDeveloperName>
        <label>Val</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>externalObject</label>
    <pluralLabel>externalObject</pluralLabel>
</CustomObject>